gatewayApi/overlays/infrastructure/resources/routeCiliumHubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cilium-hubble
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-wave: "40"
spec:
  parentRefs:
    - name: huntinternal
      namespace: infrastructure-gatewayapi
      sectionName: https
  hostnames:
    - cilium.infrastructure.hunt.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
