gatewayApi/overlays/infrastructure/resources/routeLonghorn.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "40"
spec:
  parentRefs:
    - name: huntinternal
      namespace: infrastructure-gatewayapi
      sectionName: https
  hostnames:
    - longhorn.infrastructure.hunt.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
